build-docker.yml: Upload data directories to artifact store
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -87,8 +87,10 @@ jobs:
       - name: Start ncp container
         run: |
           docker volume create ncdata
-          mkdir  /home/runner/work/ncdata
-          docker run -d --rm -p 8443:443 -p 4443:4443 -v "/home/runner/work/ncdata:/data" --name nextcloudpi thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
+          mkdir /home/runner/work/data-exports/ncdata1
+          mkdir /home/runner/work/data-exports/ncdata2
+          docker run -d --rm -p 8443:443 -p 4443:4443 -v /home/runner/work/data-exports/ncdata1:/data-export -v "ncdata:/data" --name nextcloudpi thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
+          docker run -d --rm -p 8443:443 -p 4443:4443 -v /home/runner/work/data-exports/ncdata2:/data-export --name nextcloudpinovolume thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
 
       - name: Checkout code
         uses: actions/checkout@v3
@@ -137,6 +139,15 @@ jobs:
             attempt=$((attempt + 1))
             sleep 5
           done
+          
+          docker exec nextcloudpi cp -ra /data/* /data/.[!.]* /data-export/
+          docker exec nextcloudpinovolume cp -ra /data/* /data/.[!.]* /data-export/
+      - name: Upload debugging artifacts
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ github.run_id }}-docker-${{ env.ARCH }}-volume-troubleshooting
+          path: /home/runner/work/data-exports
       - name: Integration Tests
         working-directory: ./tests
         run: |
@@ -171,7 +182,7 @@ jobs:
       - name: Start new container
         run: |
           docker stop nextcloudpi
-          docker run -d -v " /home/runner/work/ncdata:/data" --rm -p 8443:443 -p 4443:4443 -e NOBACKUP=true --name nextcloudpi thecalcaholic/ncp-internal-${ARCH?}:3955102274-testing localhost
+          docker run -d -v " /home/runner/work/data-exports/ncdata1:/data" --rm -p 8443:443 -p 4443:4443 -e NOBACKUP=true --name nextcloudpi thecalcaholic/ncp-internal-${ARCH?}:3955102274-testing localhost
       - name: Wait for container startup
         run: |
           set -e
