build-docker.yml: Upload data directories to artifact store
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -90,7 +90,7 @@ jobs:
           mkdir -p /home/runner/work/data-exports/ncdata1
           mkdir -p /home/runner/work/data-exports/ncdata2
           docker run -d --rm -p 8443:443 -p 4443:4443 -v /home/runner/work/data-exports/ncdata1:/data-export -v "ncdata:/data" --name nextcloudpi thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
-          docker run -d --rm -p 8443:443 -p 4443:4443 -v /home/runner/work/data-exports/ncdata2:/data-export --name nextcloudpinovolume thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
+          docker run -d --rm -v /home/runner/work/data-exports/ncdata2:/data-export --name nextcloudpinovolume thecalcaholic/ncp-internal-${ARCH?}:3962168407-testing localhost
 
       - name: Checkout code
         uses: actions/checkout@v3
