build-docker.yml: Fix data export
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -140,8 +140,8 @@ jobs:
             sleep 5
           done
           
-          docker exec nextcloudpi 'cp -ra /data/* /data-export/' 
-          docker exec nextcloudpi 'cp -ra /data/.[!.]* /data-export' || true
+          docker exec nextcloudpi bash -c 'cp -ra /data/* /data-export/' 
+          docker exec nextcloudpi bash -c 'cp -ra /data/.[!.]* /data-export' || true
           docker exec nextcloudpinovolume bash -c 'cp -ra /data/* /data-export/' 
           docker exec nextcloudpinovolume bash -c 'cp -ra /data/.[!.]* /data-export' || true
       - name: Upload debugging artifacts
