build-docker.yml: Fix debugging artifact ownership
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -136,7 +136,11 @@ jobs:
               echo -e "${LOG_CICD} Timeout reached."
               echo -e "${LOG_CICD} Manually starting apache..."
               docker exec nextcloudpi service apache2 stop
-              docker exec nextcloudpi apache2ctl -DFOREGROUND 
+              while true
+              do
+                docker exec nextcloudpi apache2ctl -DFOREGROUND || continue
+                break
+              done
               success=false
             fi
 
