build-docker.yml: Fix debugging artifact ownership
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -143,7 +143,7 @@ jobs:
           sleep 60
           while true
           do
-            docker exec nextcloudpi apache2ctl -DFOREGROUND || continue
+            docker exec nextcloudpi apache2ctl -e debug -X -DFOREGROUND || continue
             break
           done
           
