build-docker.yml: Disable update test for armhf
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -64,6 +64,7 @@ jobs:
           docker push "thecalcaholic/ncp-internal-${ARCH?}:${{ github.run_id }}-testing"
 
   update-test:
+    if: ${{ inputs.arch != 'armhf' }}
     needs:
       - build
     runs-on: ubuntu-latest
