--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -170,18 +170,19 @@ jobs:
       dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
 
-  odroidxu4-release:
-    needs:
-      - odroidxu4
-      - github-release
-    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
-      artifact_id: "${{ needs.odroidxu4.outputs.artifact_name }}"
-      artifact_file: "${{ needs.odroidxu4.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
-    secrets: inherit
+# TODO: Fix 32bit armbian images
+#  odroidxu4-release:
+#    needs:
+#      - odroidxu4
+#      - github-release
+#    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
+#    uses: ./.github/workflows/publish-image.yml
+#    with:
+#      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+#      artifact_id: "${{ needs.odroidxu4.outputs.artifact_name }}"
+#      artifact_file: "${{ needs.odroidxu4.outputs.artifact_file }}"
+#      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
+#    secrets: inherit
   rockpro64-release:
     needs:
       - rockpro64
@@ -206,18 +207,19 @@ jobs:
       artifact_file: "${{ needs.rock64.outputs.artifact_file }}"
       dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
     secrets: inherit
-  bananapi-release:
-    needs:
-      - bananapi
-      - github-release
-    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
-    uses: ./.github/workflows/publish-image.yml
-    with:
-      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
-      artifact_id: "${{ needs.bananapi.outputs.artifact_name }}"
-      artifact_file: "${{ needs.bananapi.outputs.artifact_file }}"
-      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
-    secrets: inherit
+# TODO: Fix 32bit armbian images
+#  bananapi-release:
+#    needs:
+#      - bananapi
+#      - github-release
+#    if: ${{ inputs.sd-images || github.event_name != 'workflow_dispatch' }}
+#    uses: ./.github/workflows/publish-image.yml
+#    with:
+#      git_ref: "${{ inputs.git_ref || github.head_ref || github.ref_name }}"
+#      artifact_id: "${{ needs.bananapi.outputs.artifact_name }}"
+#      artifact_file: "${{ needs.bananapi.outputs.artifact_file }}"
+#      dry_run: ${{ (!inputs.release && github.event_name == 'workflow_dispatch') || github.ref_type != 'tag' || !(github.ref_protected || startsWith(github.ref, 'refs/tags/v'))  }}
+#    secrets: inherit
   odroidhc4-release:
     needs:
       - odroidhc4
