--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -298,7 +298,7 @@ jobs:
 
       - name: Create manifest and push as latest to docker hub
         run: |
-          [[ "$version" =~ ^v[0-9]+'.'[0-9]+'.'[0-9]+$ ]] || {
+          [[ "${{ github.ref }}" =~ ^'ref/tags/v'[0-9]+'.'[0-9]+'.'[0-9]+$ ]] || {
             echo "not tagging latest - is a pre-/beta-release"
             exit 0
           }
